@@ -1,3 +1,10 @@
+2011-12-06  Guillaume Lazzara  <z@lrde.epita.fr>
+
+	Ensure current locale is C while calling Tesseract.
+
+	* demo/viewer/main.cc: Move call to setLocale...
+	* scribo/text/recognition.hh: ... Here.
+
 2011-11-21  Guillaume Lazzara  <z@lrde.epita.fr>
 
 	* README: update requirements information.
